--- a/src/components/Board/styles.module.css
+++ b/src/components/Board/styles.module.css
@@ -1,8 +1,10 @@
 .board-wrapper {
+    width: 100%;
+    height: 100%;
     position: relative;
     background-color: aquamarine;
-    width: 400px;
-    height: 400px;
+    /* width: 400px;
+    height: 400px; */
     overflow: hidden;
 }
 
@@ -20,4 +22,22 @@
     content: attr(data-num);
     position: absolute;
     font-size: 0.625rem;
+}
+
+.polygon {
+    transition: all 0.1s ease-in-out;
+}
+
+.polygon:hover {
+    fill:chartreuse
+}
+.polygon:active {
+    fill:darkgreen
+}
+.polygon-black {
+    fill: black;
+}
+
+.polygon-white {
+    fill: wheat;
 }
